tests/ui/traits/const-traits/unsatisfied-const-trait-bound.stderr
error: `-Znext-solver=globally` and `generic_const_exprs` are incompatible, using them at the same time is not allowed
  --> $DIR/unsatisfied-const-trait-bound.rs:6:30
   |
LL | #![feature(const_trait_impl, generic_const_exprs)]
   |                              ^^^^^^^^^^^^^^^^^^^
   |
   = help: remove one of these features

error: aborting due to 1 previous error

